# btcrecover

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  Benchmarks.md.template  Dockerfile  README.md  SKILL.md  autocrack.py  autocustom.py  autoinstall.py  autowallet.py  benchmark.py  benchmark_crypto_backends.py  btcrecover.py  btcrecover_gui.py  cardano_POC.py  check-address-db.py  compatibility_check.py  docker-compose.yml  donate.txt  generate_benchmark_docs.py  getWordlist.py  index.html  mbhd.wallet.aes.privkeys.txt  mkdocs.yml  pyproject.toml  requirements-full.txt  requirements-walletfinder.txt  requirements.txt  run-all-tests.py  seedrecover.py  seedrecover_batch.py  sitemap.xml  skills.md  test_opencl_brute.py  walletfinder-exclusionlist.txt  walletfinder.py  (+1 more)
.cache/plugin/git-committers/: page-authors.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Latest-Run-All-Tests_Base.yml  Latest-Run-All-Tests_Full.yml  PoCL-tests-full.yml  PoCL-tests.yml  Weekly-Run-All-Tests-Full.yml  Weekly-Run-All-Tests_Base.yml  benchmark-matrix.yml  docs-build.yml  lint-and-coverage.yml  termux-tests.yml
AI_Assisted_Recovery/: index.html
Benchmarks/: index.html
INSTALL/: index.html
Usage_Examples/basic_wallet_scanning/: index.html
benchmark-results/: .gitignore  benchmark_23337522631250ff_20260703_170243.json  benchmark_23337522631250ff_20260703_205450.json  benchmark_23337522631250ff_20260704_155012.json  benchmark_9e6d7d9006b08e8e_20260414_090940.json  benchmark_9e6d7d9006b08e8e_20260704_154622.json  benchmark_beb88c6aa925bd1b_20260411_131926.json  benchmark_cb2e028cead3c4f5_20260411_233337.json  benchmark_cb2e028cead3c4f5_20260412_094825.json  benchmark_e9ba335baaeea185_20260411_203717.json  benchmark_macos-latest_24287028751.json  benchmark_macos-latest_24297703507.json  benchmark_macos-latest_24318916857.json  benchmark_ubuntu-latest_24287028751.json  benchmark_ubuntu-latest_24297703507.json  benchmark_ubuntu-latest_24318916857.json  benchmark_windows-latest_24287028751.json  benchmark_windows-latest_24297703507.json  benchmark_windows-latest_24318916857.json
bip39-accounts-and-altcoins/: index.html
btcrecover/: _engine_proxy.py  addressset.py  aes_backends.py  aezeed.py  api.py  bitcoinj_pb2.py  btcrpass.py  btcrseed.py  cli.py  coinomi_pb2.py  crypto_backends.py  mcp_server.py  opencl_helpers.py  success_alert.py
btcrecover-rs/: Cargo.toml  README.md
btcrecover-rs/src/: lib.rs  main.rs
btcrecover-rs/src/bip32/: mod.rs
btcrecover-rs/src/bip39/: mod.rs  wordlist.rs
btcrecover-rs/src/bitcoin/: mod.rs  wallet.rs
btcrecover-rs/src/ethereum/: mod.rs  wallet.rs
btcrecover-rs/src/recovery/: mod.rs  password.rs  seed.rs
btcrecover-rs/src/utils/: encoding.rs
btcrecover/btcrpass/: __init__.py  _engine.py  cli.py  wallets.py
btcrecover/btcrseed/: __init__.py  _engine.py  cli.py  wallets.py
btcrecover/opencl/: sha512-bc-kernel.cl
btcrecover/test/: test_api.py  test_passwords.py  test_seeds.py  test_walletfinder.py
btcrecover/wordlists/: blockchainpassword_words_v3-en.txt
derivationpath-lists/: ADA.txt  BTC.txt
docs/: AI_Assisted_Recovery.md  Basic_vs_Full_mode.md  Benchmarks.md  Benchmarks.md.template  Extract_Scripts.md  GPU_Acceleration.md  INSTALL.md  Programmatic_and_AI_Interfaces.md  TUTORIAL.md  bip39-accounts-and-altcoins.md  donate.md  index.md  requirements.txt  tokenlist_file.md
docs/Usage_Examples/: UsageExamples.md  basic_password_recoveries.md  basic_seed_recoveries.md  basic_wallet_scanning.md  btc_privkey_tokenlist.txt
docs/Usage_Examples/2020-05-08_Recovering_Blockchain_Wallet_Passwords/: Example_Recovering_Blockchain_Wallet_Passwords.md  tokenListTest.txt
docs/Usage_Examples/2022-04-02_Seed_Tokenlist_TokenBlocks/: bip39.txt  example_seed_tokenlist_tokenblocks.md  tokengroups_tokenlist.txt
docs/Usage_Examples/2023-04-29_Checking_Swapped_Seed_Words/: example_checking_swapped_seed_words.md
evals/gpt-5-mini-skill-eval/: README.md  RESULTS.md  scenarios.md
evals/gpt-5-mini-skill-eval/responses/: s1.md  s10.md  s2.md  s3.md  s4.md  s5.md  s6.md  s7.md  s8.md  s9.md
extract-scripts/: download-blockchain-wallet.py  extract-bitcoincore-mkey.py  extract-blockchain-second-hash.py  extract-coinomi-privkey.py
lib/: aes_gcm.py  chacha20_poly1305.py  keccak.py
lib/bitcoinlib/: __init__.py  encoding.py
lib/bitcoinlib_mod/: __init__.py
lib/block_io/: __init__.py
lib/cardano/: cardano_utils.py
lib/cardano/orakolo/: HDEd25519.py
lib/emip3/: emip3.py
lib/eth_hash/backends/: __init__.py  purepython.py
lib/opencl_brute/: buffer_structs.py  opencl.py  opencl_information.py
lib/p2tr_helper/: P2TR_tools.py
lib/stacks/: c32.py
pr-preview/pr-705/: sitemap.xml
pr-preview/pr-705/Benchmarks/: index.html
pr-preview/pr-705/search/: search_index.json
pr-preview/pr-716/: sitemap.xml
pr-preview/pr-717/INSTALL/: index.html
pr-preview/pr-722/: sitemap.xml
pr-preview/pr-727/: sitemap.xml
pr-preview/pr-730/: sitemap.xml
pr-preview/pr-732/: requirements.txt  sitemap.xml
pr-preview/pr-739/: sitemap.xml
pr-preview/pr-743/: sitemap.xml
pr-preview/pr-744/: sitemap.xml
pr-preview/pr-746/: sitemap.xml
search/: search_index.json
skills/btcrecover-password/: SKILL.md
skills/build-password-tokenlist/: SKILL.md
skills/evaluation/: example_prompts.md  scenarios.json
skills/install-btcrecover/: SKILL.md
skills/locate-wallet-file/: SKILL.md
skills/seedrecover/: SKILL.md
utilities/: bip39_prefix_lookup.py  cardano_address_derivation.py  generate_batch_seed_variations.py  net_check.py  redact_skill_eval_results.py  skill_eval_harness.py  test_beeper.py
utilities/skill_eval/: README.md  example_prompts.md  example_suite.json  redact_skill_eval_results.py  run_eval_suite.py  scenarios.json  skill_eval_harness.py  skill_eval_runner.py
wallets/: README.txt
wordlist/yandex/: yandex-alleged_000001.txt  yandex-alleged_000002.txt  yandex-alleged_000003.txt  yandex-alleged_000004.txt  yandex-alleged_000005.txt  yandex-alleged_000006.txt
(+108 files in other folders)
