[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "btcrecover"
version = "1.13.0"
description = "Bitcoin wallet password and seed recovery tool"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0-or-later"
authors = [
    { name = "Christopher Gurnee" },
    { name = "3rd Iteration" },
]
keywords = ["bitcoin", "wallet", "recovery", "password", "seed", "mnemonic", "bip39"]

# Core runtime dependencies. Mirrors requirements.txt -- keep the two in sync.
# secp256k1 is provided by btcrecover.crypto_backends (coincurve preferred,
# wallycore fallback, then bundled pure-Python), so at least one of coincurve /
# wallycore should be present for reasonable speed.
dependencies = [
    "coincurve==20.0.0; python_version < '3.13'",
    "coincurve==21.0.0; python_version >= '3.13' and python_version < '3.14'",
    "wallycore>=1.0.0",
    "protobuf~=5.29.6",
    "pycryptodome~=3.23.0",
]

[project.urls]
Homepage = "https://github.com/3rdIteration/btcrecover"
Documentation = "https://btcrecover.readthedocs.io/"
Repository = "https://github.com/3rdIteration/btcrecover"

[project.optional-dependencies]
# Extended wallet-type coverage (mirrors requirements-full.txt, minus the two
# direct-URL installs which pip cannot express as extras: staking-deposit and
# the 3rdIteration sjcl fork -- install those from requirements-full.txt).
full = [
    "bip-utils==2.9.3",
    "cryptography==46.0.7",
    "ecdsa==0.19.2",
    "eth-hash==0.8.0",
    "eth-keyfile==0.9.1",
    "groestlcoin-hash==1.0.3",
    "py_crypto_hd_wallet==1.3.3",
    "py_ecc==8.0.0",
    "pylibscrypt==2.0.0",
    "pynacl==1.6.2",
    "shamir-mnemonic[cli]==0.3.0",
    "slip10==1.1.0",
    "stellar_sdk==13.2.1",
]
# Optional GPU acceleration (OpenCL). CUDA support, when present, is detected at
# runtime and gated behind its own optional dependency.
gpu = [
    "pyopencl",
    "numpy",
]
# Extra document-scanning support for walletfinder.py.
walletfinder = [
    "textract",
    "pypdf",
]
# Model Context Protocol server, for driving recovery from AI agents.
mcp = [
    "mcp>=1.0",
]
# Developer tooling: linting, coverage, and the test runner.
dev = [
    "ruff>=0.15",
    "coverage>=7",
    "pre-commit>=3",
]

[project.scripts]
btcrecover = "btcrecover.cli:password_console_entry"
seedrecover = "btcrecover.cli:seed_console_entry"
btcrecover-mcp = "btcrecover.mcp_server:main"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
# The project is primarily run from a source checkout. `pip install -e .` works
# because the checkout root is placed on sys.path (both `btcrecover` and the
# `lib` namespace package resolve from there). A full wheel build is not a
# supported workflow yet -- the bundled `lib/` tree is a PEP 420 namespace
# package rather than a regular package.
[tool.setuptools]
py-modules = ["compatibility_check"]

[tool.setuptools.packages.find]
include = ["btcrecover*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
# Only lint first-party code. The bundled third-party libraries under lib/ and
# the generated protobuf stubs are intentionally left untouched.
extend-exclude = [
    "lib",
    "docs",
    "*_pb2.py",
    "btcrecover/test/test-wallets",
    "btcrecover/test/test-listfiles",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Ratchet strategy for adopting a linter on a long-lived codebase: enable a
# broad, high-signal rule set so any *newly* clean rule is enforced from now on,
# and explicitly defer the categories that are pervasively violated today. Those
# deferred rules are stylistic/mechanical (not bugs) and are best cleaned up
# per-module as the two engine monoliths are split into packages, rather than in
# one giant mechanical diff. Tighten this list (remove ignores) over time.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    # Line length is the formatter's concern, not enforced as a lint error.
    "E501",
    # Deliberate patterns in this codebase: bare-except recovery fallbacks,
    # module imports placed after sys.path shims, ambiguous single-letter names
    # (l/I/O) common in crypto code, and star imports from bundled-style modules.
    "E402", "E722", "E741", "F403", "F405",
    # Whitespace / trivial layout -- deferred to the per-module cleanup.
    "W191", "W291", "W292", "W293", "E101", "E401", "E701", "E703",
    # Comparison / lambda style.
    "E712", "E721", "E731",
    # Pyflakes findings that need per-module review (unused imports/vars,
    # duplicate imports). Real F-category *errors* (e.g. F821 undefined-name)
    # remain enforced.
    "F401", "F541", "F811", "F841",
    # Import sorting: deferred because several modules rely on import ordering
    # around sys.path shims (see E402); auto-sorting risks breaking those.
    "I001",
    # pyupgrade: safe but large mechanical rewrites (f-strings, PEP 585/604
    # annotations, super() args, etc.) -- staged for the package split.
    "UP004", "UP006", "UP007", "UP008", "UP009", "UP012", "UP015", "UP018",
    "UP020", "UP022", "UP024", "UP025", "UP028", "UP031", "UP032", "UP034",
    "UP035", "UP036", "UP045",
    # flake8-bugbear patterns that are behaviour-sensitive to change here.
    "B006", "B007", "B008", "B011", "B020", "B023", "B028", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
# Test modules are exercised by the suite, not held to the same style bar.
"btcrecover/test/*" = ["E", "F", "B", "UP"]
"__init__.py" = ["F401"]  # re-exports

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["btcrecover"]
omit = [
    "btcrecover/test/*",
    "btcrecover/*_pb2.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
