[package]
name = "btcrecover-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of btcrecover - Bitcoin and Ethereum wallet password/seed recovery tool"
license = "GPL-2.0"

[dependencies]
# Cryptographic primitives
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
ripemd = "0.1"
sha3 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-gcm = "0.10"

# Elliptic curve / secp256k1
secp256k1 = { version = "0.30" }

# Encoding
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.11"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"
